--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -42,10 +42,10 @@
             {{/years}}
         </div>
         <div class="month-bars">
-            <h2>Number of Incidents</h2>
+            <h2>Number of incidents</h2>
         </div>
         <div class="top-categories">
-            <h2>Most Occurrences</h2>
+            <h2>Most occurrences</h2>
             <div class="categories-col">
                 {{#topCategories[0]:i}}
                     <div class="category">{{i+1}}. {{key}} <span class="count">{{values}}</span></div>
