--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -3,28 +3,17 @@
         <img src="assets/imgs/logo.png" alt="The Nauru Files">
     </div>
     <div class="header-image">
-<!--         <svg id="fenceBg" width="100%" height="450" viewBox="0 0 1000 250" preserveAspectRatio="none">
-            <defs>
-              <pattern id="fencePattern" patternUnits="userSpaceOnUse" viewBox="0 0 548 450" width="548" height="450">
-                <image xlink:href="assets/imgs/fence-bg.jpg" x="0" y="0" width="548" height="450" />
-              </pattern>
-            </defs>
-            <polygon class="st0" points="0,90 750,0 1000,0 1000,250 0,140" fill="url(#fencePattern)"/>
-
-        </svg> -->
     </div>
     <div class="header-text-bg"></div>
     <div class="figure-image"></div>
     <div class="header-text-container">
         <div class="header-text">
-            <h1>The Nauru files</h1>
+<!--             <h1>The Nauru files</h1> -->
             <div class="subHeading">The lives of asylum seekers in detention detailed in a unique database</div>
-            <div class="standfirst">Each of these squares is an incident report written by staff in Australia’s detention centre on Nauru between 2013 and 2015. The reports are categorised by severity and type. Click on a square to see expanded details. <b>Warning: these files contain details that may distress some readers</b></div>
+            <div class="standfirst">Each of these squares is an incident report written by staff in Australia’s detention centre on Nauru between 2013 and 2015. The reports are categorised by severity and type. <b>Warning: these files contain details that may distress some readers</b></div>
             <div class="byline"><a href="">Nick Evershed</a>, <a href="">Ri Liu</a>, <a href="">Paul Farrell</a>, and <a href="">Helen Davidson</a></div>
-            <div class="more-actions">
-                <div class="about"><a id="about-modal" on-tap='showAbout'>About the data</a></div>
-                <div class="btns-share"><button class="btn-tt" data-source="twitter"></button> <button class="btn-fb" data-source="facebook"></button></div>
-            </div>
+            <div class="about"><a id="about-modal" on-tap='showAbout'>About the data</a></div>
+            <div class="btns-share"><button class="btn-tt" data-source="twitter"></button> <button class="btn-fb" data-source="facebook"></button></div>
         </div>
     </div>
 </div>    
