--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -11,7 +11,7 @@
 <!--             <h1>The Nauru files</h1> -->
             <div class="subHeading">The lives of asylum seekers in detention detailed in a unique database</div>
             <div class="standfirst">Each of these squares is an incident report written by staff in Australia’s detention centre on Nauru between 2013 and 2015. The reports are categorised by severity and type. <b>Warning: these files contain details that may distress some readers</b></div>
-            <div class="byline"><a href="">Nick Evershed</a>, <a href="">Ri Liu</a>, <a href="">Paul Farrell</a>, and <a href="">Helen Davidson</a></div>
+            <div class="byline"><a href="https://www.theguardian.com/profile/nick-evershed" target="_blank">Nick Evershed</a>, <a href="https://www.theguardian.com/profile/ri-liu" target="_blank">Ri Liu</a>, <a href="https://www.theguardian.com/profile/paul-farrell" target="_blank">Paul Farrell</a>, and <a href="https://www.theguardian.com/profile/helen-davidson" target="_blank">Helen Davidson</a></div>
             <div class="about"><a id="about-modal" on-tap='showAbout'>About the data</a></div>
             <div class="btns-share"><button class="btn-tt" data-source="twitter"></button> <button class="btn-fb" data-source="facebook"></button></div>
         </div>
