testing other logo

--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="logo-container">
-        <img src="@@assetPath@@/assets/imgs/logo.png" alt="The Nauru Files">
+        <img src="@@assetPath@@/assets/imgs/logo2.png" alt="The Nauru Files">
     </div>
     <div class="header-image">
     </div>
