update modal content

--- a/src/js/text/reportModal.html
+++ b/src/js/text/reportModal.html
@@ -1,4 +1,4 @@
-<div class='modal-background' on-tap='bg-close' intro='fade' outro='fade'>
+<div class='modal-background' id="report-modal" on-tap='bg-close' intro='fade' outro='fade'>
   <div class='modal-outer'>
     <div class='modal'>
         <div class="modal-header">
@@ -7,7 +7,7 @@
         </div>
         <div class="modal-content">
             <div class="secure-contact">
-              Click <a href="">here</a> to contact us securely or use the form below to get in touch.
+              Click <a href="https://www.theguardian.com/media/2016/aug/10/how-to-contact-the-nauru-files-reporters-securely-and-confidentially" target="_blank">here</a> to contact us securely or use the form below to get in touch.
             </div>
             <form action="https://docs.google.com/a/guardian.co.uk/forms/d/e/1FAIpQLSd7XrWUpd4NUvIkKBBluQRC5rMdC7eUvSqCqJK-dslQlqvozA/formResponse" method="POST" id="nauru-report-form" target="hidden_iframe" onsubmit="">
             <div class="input-container">
