remove missing files and fix report modal close link updating

--- a/src/js/text/reportModal.html
+++ b/src/js/text/reportModal.html
@@ -1,6 +1,6 @@
-<div class='modal-background' id="report-modal" on-tap='bg-close' intro='fade' outro='fade'>
+<div class='modal-background' on-tap='bg-close' intro='fade' outro='fade'>
   <div class='modal-outer'>
-    <div class='modal'>
+    <div class='modal' id="report-modal">
         <div class="modal-header">
           <h3>Submit a note</h3>
           <a class="close" on-tap='close'></a>
