--- a/src/js/text/aboutModal.html
+++ b/src/js/text/aboutModal.html
@@ -20,6 +20,8 @@
 
           <p>The Guardian’s interactive holds the detailed incident reports as well as a “summary log” of each report. All of these have been written by detention centre staff. The data has been grouped by month and year, by incident category and by risk rating. You can explore individual incidents, or search by type or timeframe. When you select an individual incident you can also share it across social networks.</p>
 
+          <p>The summary logs that appear when you click on the coloured squares are the staff’s truncated versions of the detailed incident reports. Click “See original report” to view the incident reports themselves.</p>
+
           <h4>Who writes these reports?</h4>
 
           <p>Scores of staff from a number of private companies have written them. The Australian government has privatised its immigration detention system, outsourcing the services within it. Broadspectrum (formerly known as Transfield Services) manages the detention centre and subcontracts security services to Wilson Security. International Health and Medical Services provides medical care. Save the Children provided welfare and childcare services until the end of 2015.</p>
