--- a/src/js/text/template.html
+++ b/src/js/text/template.html
@@ -113,11 +113,11 @@
 </div>
 
 <div class="footer" id="footer">
-    <h2>the Nauru Files</h2>
+    <h2>The Nauru files</h2>
     <ul class="footer-grid">
         <li>
             <div class="footer-item-container">
-                <img src="@@assetPath@@/assets/imgs/footer/article1.jpg">
+                <img src="@@assetPath@@/assets/imgs/footer/article2.jpg">
                 <div class="footer-text-content">
                     <h2>The Nauru files: 2,000 leaked reports reveal scale of abuse of children in Australian offshore detention</h2>
                 </div>
@@ -150,15 +150,15 @@
                     </div>
                     <h2>Members</h2>
                 </div>
-                <img src="@@assetPath@@/assets/imgs/footer/article2.jpg">
+                <img src="@@assetPath@@/assets/imgs/footer/article1.jpg">
                 <div class="footer-text-content">
                     <h2>Become a Supporter</h2>
-                    <div class="subheading">Support our investigative journalism that speaks truth to power.</div>
-                    <a class="button" href="https://membership.theguardian.com/au/supporter">Click here 
+                    <div class="subheading">Help us to continue our independent, fearless journalism.</div>
+                    <a class="button" href="https://membership.theguardian.com/au/supporter?INTCMP=mem_au_editorial_Nauru_NIck_footer">Click here 
                         <svg class="arrow-icon" width="30" height="30" viewBox="0 0 30 30"><path d="M22.8 14.6l-7.6-7.6-.7.7 5.5 6.6h-14v1.5h14l-5.5 6.6.7.7 7.6-7.6v-.9"></path></svg>
                     </a>
                 </div>
-                <a class="anchor" href="https://membership.theguardian.com/au/supporter" target="_blank"></a>
+                <a class="anchor" href="https://membership.theguardian.com/au/supporter?INTCMP=mem_au_editorial_Nauru_NIck_footer" target="_blank"></a>
             </div>
         </li>       
     </ul>
