removal of old data files, text tweaks

--- a/src/js/text/reportModal.html
+++ b/src/js/text/reportModal.html
@@ -7,9 +7,10 @@
         </div>
         <div class="modal-content">
             <div class="secure-contact">
-              Click <a href="https://www.theguardian.com/media/2016/aug/10/how-to-contact-the-nauru-files-reporters-securely-and-confidentially" target="_blank">here</a> to contact us securely or use the form below to get in touch.
+              Click <a href="https://www.theguardian.com/media/2016/aug/10/how-to-contact-the-nauru-files-reporters-securely-and-confidentially" target="_blank">here</a> to contact us securely or use <a href='https://docs.google.com/forms/d/e/1FAIpQLSd7XrWUpd4NUvIkKBBluQRC5rMdC7eUvSqCqJK-dslQlqvozA/viewform' target='_blank'>this form to get in touch</a>.
             </div>
-            <form action="https://docs.google.com/a/guardian.co.uk/forms/d/e/1FAIpQLSd7XrWUpd4NUvIkKBBluQRC5rMdC7eUvSqCqJK-dslQlqvozA/formResponse" method="POST" id="nauru-report-form" target="hidden_iframe" onsubmit="">
+            
+<!--             <form action="https://docs.google.com/a/guardian.co.uk/forms/d/e/1FAIpQLSd7XrWUpd4NUvIkKBBluQRC5rMdC7eUvSqCqJK-dslQlqvozA/formResponse" method="POST" id="nauru-report-form" target="hidden_iframe" onsubmit="">
             <div class="input-container">
               <label for="nauru-form-note">Details</label>
               <textarea type="text" name="entry.396313401" id="nauru-form-note" dir="auto" aria-label="Notes"></textarea>
@@ -23,7 +24,7 @@
             {{/incident}}
             <input type="submit" name="submitButton" value="Submit" id="nauru-report-submit">
             </form>
-            <iframe name="hidden_iframe" id="hidden_iframe" ></iframe>
+            <iframe name="hidden_iframe" id="hidden_iframe" ></iframe> -->
         </div>
     </div>
   </div>
